deploy/redis.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: redis-ns
---
apiVersion: v1
kind: Service
metadata:
  name: redis-hs
  namespace: redis-ns
spec:
  clusterIP: None
  selector:
    app: redis
  ports:
    - port: 6379
      name: tcp-redis
---
apiVersion: v1
kind: Service
metadata:
  name: redis-service
  namespace: redis-ns
spec:
  type: ClusterIP
  selector:
    app: redis
  ports:
    - port: 6379
      targetPort: 6379
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: redis-ss
  namespace: redis-ns
spec:
  replicas: 1
  serviceName: "redis-hs"
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      resources:
        requests:
          cpu: "128m"
          memory: "128Mi"
        limits:
          cpu: "256m"
          memory: "256Mi"
      containers:
        - name: redis
          image: redis/redis-stack-server:latest
          command: ["redis-server"]
          args: ["/conf/redis.conf"]
          ports:
            - containerPort: 6379
          readinessProbe:
            exec:
              # command: ["redis-cli", "-a", "password", "ping"]
              command:
                - /bin/sh
                - -c
                - "redis-cli -u redis://${REDIS_USER}:${REDIS_PASSWORD}@127.0.0.1:6379 ping"
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 3
          livenessProbe:
            exec:
              # command: ["redis-cli", "-a", "password", "ping"]
              command:
                - /bin/sh
                - -c
                - "redis-cli -u redis://${REDIS_USER}:${REDIS_PASSWORD}@127.0.0.1:6379 ping"
            initialDelaySeconds: 30
            periodSeconds: 20
            timeoutSeconds: 3
          volumeMounts:
            - name: redis-data
              mountPath: /data
            - name: redis-volume
              mountPath: /conf
              readOnly: true
      volumes:
        - name: redis-volume
          configMap:
            name: redis-conf
            items:
              - key: redis.conf
                path: redis.conf
  volumeClaimTemplates:
    - metadata:
        name: redis-data
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: local-path
        resources:
          requests:
            storage: 1Gi
