deploy/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all
  namespace: default
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-frontend
  namespace: backend
spec:
  podSelector: {}
  # podSelector:
  #   matchLabels:
  #     app: billing
  #     app: compute
  #     app: users
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              role: frontend
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: user-deployment-isolation
  namespace: user-{id}
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/managed-by: poddle
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              name: kube-system # Allow Traefik
      ports:
        - protocol: TCP
          port: 80
  egress:
    - to:
        - namespaceSelector: {}
      ports:
        - protocol: TCP
          port: 443 # HTTPS
        - protocol: TCP
          port: 80 # HTTP
    - to:
        - namespaceSelector: {}
      ports:
        - protocol: UDP
          port: 53 # DNS
